syntax = "proto3";

import "renderer/vertex_attributes.proto";
import "renderer/uniform_attributes.proto";
import "renderer/assets.proto";

package renderer;

message Drawable {
    optional uint32 layer = 1;
    optional VertexAttributes vertex_attributes = 2;
    optional UniformAttributes uniform_attributes = 3;
    optional SharedUniformAttributes shared_attributes = 4;
    optional Assets assets = 5;
}
