syntax = "proto3";

import "renderer/gl_types.proto";

package renderer;

message UniformAttributes {
    map<string, float> float = 1;
    map<string, float_array> vec2 = 2;
    map<string, float_array> vec3 = 3;
    map<string, float_array> vec4 = 4;

    map<string, uint32> int = 5;
    map<string, uint32_array> ivec2 = 6;
    map<string, uint32_array> ivec3 = 7;
    map<string, uint32_array> ivec4 = 8;

    map<string, float_array> mat4 = 9;
}

message CameraUniformAttributes {
    optional string camera_view = 1; // mat4
    optional string camera_proj = 2; // mat4
    
    optional string camera_forward = 3; // vec3
}

message SharedUniformAttributes {
    optional CameraUniformAttributes camera = 1;
}